# FMS

./: .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  AUTOTOOLS_INSTRUCTIONS.md  CHANGELOG.md  CI.md  CMAKE_INSTRUCTIONS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  FMS.pc  FMS.pc.in  FMSConfig.cmake.in.in  FMSConfigVersion.cmake.in.in  INSTALL.md  LICENSE  LICENSE.md  LOG  Makefile  Makefile.am  README.md  TESTING.md  _package_init_cmake  acinclude.m4  affinity_8c.html  affinity_8c.js  affinity_8c_source.html  amip__interp_8F90.html  amip__interp_8F90.js  amip__interp_8F90_source.html  annotated.html  annotated_dup.js  argparse_8F90.html  argparse_8F90.js  argparse_8F90_source.html  array__utils_8inc.html  array__utils_8inc.js  array__utils_8inc_source.html  (+4456 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
CMakeModules/: FindNetCDF.cmake  FindNetCDFF.cmake
affinity/: Makefile.am  affinity.c  fms_affinity.F90  test_affinity.F90
amip_interp/: CMakeLists.txt  INPROGRESSamip_interp.F90  Makefile.am  amip_interp.F90  amip_interp.doc.html  amip_interp.html  amip_interp.rey_oi.md  amip_interp.rey_oi.txt
amip_interp/include/: amip_interp.inc  amip_interp_r4.fh  amip_interp_r8.fh
astronomy/: CMakeLists.txt  Makefile.am  astronomy.F90  astronomy.html  astronomy.tech.ps
astronomy/include/: astronomy.inc  astronomy_r4.fh  astronomy_r8.fh
axis_utils/: CMakeLists.txt  Makefile.am  axis_utils.F90  axis_utils.html  axis_utils2-fh.F90  axis_utils2.F90  axis_utils2.fh  axis_utils2.inc
axis_utils/include/: axis_utils2.fh  axis_utils2.inc  axis_utils2_r4.fh  axis_utils2_r8.fh
b/: FMS.pc  config.status
block_control/: CMakeLists.txt  Makefile.am  block_control.F90
cMakeBuild/: CMakeCache.txt  cmake_install.cmake  fms-config-version.cmake  fms-config.cmake  fms-targets.cmake
chksum/: changes_chksum.html  chksum.F90  chksum.html
clocks/: changes_clocks.html  (+2 more)
column_diagnostics/: CMakeLists.txt  Makefile.am  PROGRESScolumn_diagnostics.F90  column_diagnostics.F90
column_diagnostics/include/: column_diagnostics.fh  column_diagnostics.inc  column_diagnostics_r4.fh  column_diagnostics_r4.inc  column_diagnostics_r8.fh  column_diagnostics_r8.inc
constants/: CMakeLists.txt  Makefile.am  constants.F90  constants.F90.SAFE  constants.doc.html  constants.html  fmsconstants.F90  geos_constants.fh  geos_constants.h  gfdl_constants.fh  gfdl_constants.h  gfs_constants.fh  gfs_constants.h
constants4/: Makefile.am  constants4.F90  constantsr4.F90  fmsconstants4.F90  fmsconstantsr4.F90  geos_constantsR4.fh  geos_constantsR4.h  gfdl_constantsR4.fh  gfdl_constantsR4.h  gfs_constantsR4.fh  gfs_constantsR4.h
coupler/: CMakeLists.txt  Makefile.am  atmos_ocean_dep_fluxes_calc.f90  atmos_ocean_fluxes.F90  atmos_ocean_fluxes.html  atmos_ocean_fluxes_calc.f90  coupler_types.F90  coupler_types.html  ensemble_manager.F90  fms_coupler_types.F90  fms_ensemble_manager.F90  generic_exchange.F90  gex.F90
coupler/include/: atmos_ocean_fluxes.inc  coupler_types.inc  coupler_types_r4.fh  coupler_types_r8.fh
data_override/: CMakeLists.txt  Makefile.am  README.MD  data_override.F90  data_override.html  data_override_impl.F90  get_grid_version.F90  get_grid_version_fms2io.F90  get_grid_version_mpp.F90
data_override/docs/: data_table.json
data_override/include/: data_override.inc  data_override_impl.inc  data_override_impl_r4.fh  data_override_impl_r8.fh  data_override_r4.fh  data_override_r8.fh  get_grid_version.inc  get_grid_version_r4.fh  get_grid_version_r8.fh
diag_integral/: 734diag_integral.F90  Makefile.am  diag_integral.F90  diag_integral.html  fms_diag_integral.F90
diag_integral/include/: diag_integral.inc  diag_integral_r4.fh  diag_integral_r8.fh
diag_manager/: 1358diag_manager.F90  2770diag_util.F90  367diag_data.F90  682diag_data.F90  779diag_grid.F90  967diag_axis.F90  CMakeLists.txt  Makefile.am  README.md  Untitled Diagram.drawio  classDiagramDiagObjects  diag_axis.F90  diag_axis.html  diag_data.F90  diag_data.html  diag_grid.F90  diag_grid.html  diag_manager.F90  diag_manager.doc.html  diag_manager.f90  diag_manager.html  diag_manager_end  diag_manager_nml.md  diag_manifest.F90  diag_output.F90  diag_output.html  diag_table.F90  diag_table.html  diag_table_tk  diag_table_tk.html  diag_util.F90  diag_util.html  diag_yaml.c  diag_yaml.h  diag_yaml_format.md  fms_diag_accept_data.F90  fms_diag_axis_object.F90  fms_diag_bbox.F90  fms_diag_buffer.F90  fms_diag_dlinked_list.F90  (+22 more)
diag_manager/docs_uml/: MDMClassObjects.drawio  acceptProcessWrite.drawio  classDiagramDiagObjects.drawio  diag_manager_init.drawio  fms_diag_object_relationships.drawio
diag_manager/include/: fms_diag_fieldbuff_update.fh  fms_diag_fieldbuff_update.inc  fms_diag_input_buffer.inc  fms_diag_input_buffer_r4.fh  fms_diag_input_buffer_r8.fh  fms_diag_reduction_methods.inc  fms_diag_reduction_methods_r4.fh  fms_diag_reduction_methods_r8.fh
docs/: Doxyfile.in  Makefile.am  diag_table.md  doxyfile  doxygenGuide.md  grouping.h  landingPage.md  layout.xml
drifters/: CMakeLists.txt  Makefile.am  README.md  cloud_interpolator.F90  drifters.F90  drifters.html  drifters581.F90  drifters858.F90  drifters_combine  drifters_comm.F90  drifters_comm322.F90  drifters_compute_k.fh  drifters_compute_k.h  drifters_core.F90  drifters_input.F90  drifters_io.F90  drifters_push.fh  drifters_push.h  drifters_set_field.fh  drifters_set_field.h  fms_cloud_interpolator.F90  fms_switches.h  quicksort.F90  readme.txt
drifters/include/: drifters_io.inc
exchange/: CMakeLists.txt  Makefile.am  exchange.F90  exchange.ps  exchange_grid_details.ps  fms_stock_constants.F90  stock_constants.F90  test_xgrid.F90  xgrid.F90  xgrid.f90  xgrid.html  xgrid1418.F90
fft/: CMakeLists.txt  Makefile.am  fft.F90  fft.html  fft99.F90
field_manager/: CMakeLists.txt  Makefile.am  field_manager.F90  field_manager.html  fm_util.F90  fm_util.html  fm_yaml.F90  fms_fm_yaml.F90  parse.inc
field_manager/include/: field_manager.inc  field_manager_r4.fh  field_manager_r8.fh  fm_util.inc  fm_util_r4.fh  fm_util_r8.fh  parse.inc
(+1824 files in other folders)
